# time_reversal_refocusing

./: .gitignore  AGENTS.md  LICENSE  README.md  config.toml  pyproject.toml
notebooks/: numerical_experiments.ipynb
scripts/: broadband_time_reversal.py  compare_time_reversal_comprehensive.py  main_homogeneous.py  main_homogeneous_time_reversal.py  main_random_medium.py  main_random_medium_time_reversal.py  main_random_medium_time_reversal_animation.py  main_random_medium_time_reversal_statistical_props.py  multiprocessing_video.py
src/time_reversal/: broadband.py  broadband_lib.py  config.py  field.py  homogeneous_forward.py  homogeneous_time_reversal_forward.py  operators.py  propagation_fun.py  propagator.py  random_process.py  schrodinger.py  simulation.py  solver.py  viz.py
