[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time_reversal"
version = "0.1.0"
description = "Time reversal in homogeneous and random media"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Rouchouse Damien", email = "damien.rouchouse@etu.minesparis.psl.eu"},
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy",
    "ruff>=0.15.1",
    "scipy",
    "torch",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "black",
  "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["src/time_reversal"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.uv.workspace]
members = [
    "inverse_problem",
    ".",
]

[tool.uv.sources]
time-reversal = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "time-reversal",
]
