[project]
name = "time_reversal"
version = "0.1.0"
description = "Time reversal in homogeneous and random media"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Rouchouse Damien", email = "damien.rouchouse@etu.minesparis.psl.eu"},
]
dependencies = [
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = []

[tool.pyright]
typeCheckingMode = "basic"
